feature(search): search bar done

--- a/search/index.html
+++ b/search/index.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram</title>
-  </head>
-  <body>
-    Busca
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram</title>
+  <link rel="stylesheet" href="../styles/css/pages/search.css">
+</head>
+
+<body>
+  <main>
+    <div class="search-container">
+      <div class="search-bar-container">
+        <img class="search-icon" src="../assets/icon/search-icon.png" alt="Search">
+        <input class="search-input" type="search" placeholder="Search">
+      </div>
+      <img class="qrcode-icon" src="../assets/icon/qrcode-icon.png" alt="QR Code">
+    </div>
+
+    <div class="query-container">
+
+    </div>
+
+    <div class="suggestions-container">
+
+    </div>
+  </main>
+
+  <section class="tab-bar">
+    <a href="#"><img src="../assets/icon/home-icon.png" class="action-icon" alt="" /></a>
+    <a href="#"><img src="../assets/icon/search-icon.png" class="action-icon" alt="" /></a>
+    <a href="#"><img src="../assets/icon/add-icon.png" class="action-icon" alt="" /></a>
+    <a href="#"><img src="../assets/icon/like-icon.png" class="action-icon" alt="" /></a>
+    <a href="#"><img src="../assets/icon/user-icon.png" class="action-icon" alt="" /></a>
+  </section>
+</body>
+
 </html>
