feature(query): query suggestions done

--- a/search/index.html
+++ b/search/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Instagram</title>
   <link rel="stylesheet" href="../styles/css/pages/search.css">
+  <link rel="shortcut icon" href="../assets/icon/favicon.ico" />
 </head>
 
 <body>
@@ -19,7 +20,26 @@
     </div>
 
     <div class="query-container">
-
+      <div class="query-item">
+        <img class="query-icon" src="../assets/icon/igtv-icon.png" alt="IGTV">
+        <p>IGTV</p>
+      </div>
+      <div class="query-item">
+        <img class="query-icon" src="../assets/icon/shop-icon.png" alt="Shop">
+        <p>Shop</p>
+      </div>
+      <div class="query-item">
+        <p>Style</p>
+      </div>
+      <div class="query-item">
+        <p>Sports</p>
+      </div>
+      <div class="query-item">
+        <p>Auto</p>
+      </div>
+      <div class="query-item">
+        <p>Animals</p>
+      </div>
     </div>
 
     <div class="suggestions-container">
