feature(like): page started, halfway on like-new

--- a/likes/index.html
+++ b/likes/index.html
@@ -1,11 +1,61 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram</title>
-  </head>
-  <body>
-    Curtidas
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram</title>
+  <link rel="stylesheet" href="../styles/css/pages/likes.css" />
+  <link rel="shortcut icon" href="../assets/icon/favicon.ico" />
+</head>
+
+<body>
+  <div class="section-container">
+    <p>Following</p>
+    <p class="selected">You</p>
+  </div>
+
+  <main class="likes-feed">
+    <p class="categories">Follow Request</p>
+
+    <div class="time-section">
+      <header>
+        New
+      </header>
+    </div>
+
+    <div class="time-section">
+      <header>
+        Today
+      </header>
+    </div>
+
+    <div class="time-section">
+      <header>
+        Yesterday
+      </header>
+    </div>
+
+    <div class="time-section">
+      <header>
+        This Week
+      </header>
+    </div>
+
+    <div class="time-section">
+      <header>
+        This Month
+      </header>
+    </div>
+  </main>
+
+  <section class="tab-bar">
+    <a href="../home/index.html"><img src="../assets/icon/home-icon.png" class="action-icon" alt="Home" /></a>
+    <a href="../search/index.html"><img src="../assets/icon/search-icon.png" class="action-icon" alt="Search" /></a>
+    <a href="#"><img src="../assets/icon/add-icon.png" class="action-icon" alt="Add" /></a>
+    <a href="../likes/index.html"><img src="../assets/icon/like-icon.png" class="action-icon" alt="Like" /></a>
+    <a href="#"><img src="../assets/icon/user-icon.png" class="action-icon" alt="User" /></a>
+  </section>
+</body>
+
 </html>
