--- a/search/index.html
+++ b/search/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Instagram</title>
-  <link rel="stylesheet" href="../styles/css/pages/search.css">
+  <link rel="stylesheet" href="../styles/css/pages/search.css" />
   <link rel="shortcut icon" href="../assets/icon/favicon.ico" />
 </head>
 
@@ -63,11 +63,11 @@
   </main>
 
   <section class="tab-bar">
-    <a href="#"><img src="../assets/icon/home-icon.png" class="action-icon" alt="" /></a>
-    <a href="#"><img src="../assets/icon/search-icon.png" class="action-icon" alt="" /></a>
-    <a href="#"><img src="../assets/icon/add-icon.png" class="action-icon" alt="" /></a>
-    <a href="#"><img src="../assets/icon/like-icon.png" class="action-icon" alt="" /></a>
-    <a href="#"><img src="../assets/icon/user-icon.png" class="action-icon" alt="" /></a>
+    <a href="#"><img src="../assets/icon/home-icon.png" class="action-icon" alt="Home" /></a>
+    <a href="#"><img src="../assets/icon/search-icon.png" class="action-icon" alt="Search" /></a>
+    <a href="#"><img src="../assets/icon/add-icon.png" class="action-icon" alt="Add" /></a>
+    <a href="#"><img src="../assets/icon/like-icon.png" class="action-icon" alt="Like" /></a>
+    <a href="#"><img src="../assets/icon/user-icon.png" class="action-icon" alt="User" /></a>
   </section>
 </body>
 
