feaure(like page): everything implemented

--- a/likes/index.html
+++ b/likes/index.html
@@ -16,44 +16,145 @@
   </div>
 
   <main class="likes-feed">
-    <p class="categories">Follow Request</p>
+    <p class="categories">Follow Requests</p>
 
     <div class="time-section">
       <header>
         New
       </header>
+      <div class="like-new">
+        <div class="like-author-container">
+          <img class="like-author" src="../assets/img/karennne.png" alt="karennne icon">
+        </div>
+
+        <div class="like-message">
+          <p><span class="author-name">karennne</span> liked your photo. <span class="time">1h</span></p>
+        </div>
+
+        <div class="liked-img">
+          <img class="liked-img" src="https://picsum.photos/100/100?random=1" alt="Liked Image">
+        </div>
+      </div>
     </div>
 
     <div class="time-section">
       <header>
         Today
       </header>
-    </div>
+      <div class="like-new">
+        <div class="like-author-container">
+          <img class="multiple-authors" src="../assets/img/kieron_d.png" alt="kiero_d icon">
+          <img class="multiple-authors" src="../assets/img/zackjohn.png" alt="zackjohn icon">
+        </div>
 
-    <div class="time-section">
-      <header>
-        Yesterday
-      </header>
+        <div class="like-message">
+          <p><span class="author-name">kiero_d</span>, <span class="author-name">zackjohn</span> and <span
+              class="author-name">26 others</span> liked your photo. <span class="time">3h</span></p>
+        </div>
+
+        <div class="liked-img">
+          <img class="liked-img" src="https://picsum.photos/100/100?random=1" alt="Liked Image">
+        </div>
+      </div>
     </div>
 
     <div class="time-section">
       <header>
         This Week
       </header>
+      <div class="like-news">
+        <div class="mention">
+          <div class="like-new">
+            <div class="like-author-container">
+              <img class="like-author" src="../assets/img/craig_love.png" alt="karennne icon">
+            </div>
+
+            <div class="like-message">
+              <p><span class="author-name">craig_love</span> mentioned you in a comment: <span
+                  class="user-link">@jacob_w</span> exactly... &#x1F320; <span class="time">2d</span></p>
+            </div>
+
+            <div class="liked-img">
+              <img class="liked-img" src="https://picsum.photos/100/100?random=3" alt="Liked Image">
+            </div>
+          </div>
+          <div class="reaction">
+            <img class="like-icon" src="../assets/icon/like-icon.svg" alt="Like Icon">
+            <p>Reply</p>
+          </div>
+        </div>
+
+        <div class="like-new">
+          <div class="like-author-container">
+            <img class="like-author" src="../assets/img/martini_rond.png" alt="martini_rond icon">
+          </div>
+
+          <div class="like-message">
+            <p><span class="author-name">martini_rond</span> started following you. <span class="time">3d</span></p>
+          </div>
+
+          <div class="message-box">
+            <p>Message</p>
+          </div>
+        </div>
+
+        <div class="like-new">
+          <div class="like-author-container">
+            <img class="like-author" src="../assets/img/maxjacobson.png" alt="maxjacobson.png icon">
+          </div>
+
+          <div class="like-message">
+            <p><span class="author-name">maxjacobson.png</span> started following you. <span class="time">3d</span></p>
+          </div>
+
+          <div class="message-box">
+            <p>Message</p>
+          </div>
+        </div>
+
+        <div class="like-new">
+          <div class="like-author-container">
+            <img class="like-author" src="../assets/img/maxjacobson.png" alt="maxjacobson icon">
+          </div>
+
+          <div class="like-message">
+            <p><span class="author-name">maxjacobson</span> started following you. <span class="time">3d</span></p>
+          </div>
+
+          <div class="follow-box">
+            <p>Follow</p>
+          </div>
+        </div>
+      </div>
     </div>
 
     <div class="time-section">
       <header>
         This Month
       </header>
+      <div class="like-new">
+        <div class="like-author-container">
+          <img class="like-author" src="../assets/img/karennne.png" alt="karennne icon">
+        </div>
+
+        <div class="like-message">
+          <p><span class="author-name">karennne</span> started following you. <span class="time">2 weeks</span></p>
+        </div>
+
+        <div class="message-box">
+          <p>Message</p>
+        </div>
+      </div>
     </div>
+
   </main>
 
   <section class="tab-bar">
-    <a href="../home/index.html"><img src="../assets/icon/home-icon.png" class="action-icon" alt="Home" /></a>
+    <a href="../home/index.html"><img src="../assets/icon/home-icon.svg" class="action-icon" alt="Home" /></a>
     <a href="../search/index.html"><img src="../assets/icon/search-icon.png" class="action-icon" alt="Search" /></a>
     <a href="#"><img src="../assets/icon/add-icon.png" class="action-icon" alt="Add" /></a>
-    <a href="../likes/index.html"><img src="../assets/icon/like-icon.png" class="action-icon" alt="Like" /></a>
+    <a href="../likes/index.html"><img src="../assets/icon/like-icon.svg" class="action-icon" alt="Like"
+        id="like-icon" /></a>
     <a href="#"><img src="../assets/icon/user-icon.png" class="action-icon" alt="User" /></a>
   </section>
 </body>
