feature(user-info): account alt

--- a/likes/index.html
+++ b/likes/index.html
@@ -155,7 +155,7 @@
     <a href="#"><img src="../assets/icon/add-icon.png" class="action-icon" alt="Add" /></a>
     <a href="../likes/index.html"><img src="../assets/icon/like-icon.svg" class="action-icon" alt="Like"
         id="like-icon" /></a>
-    <a href="#"><img src="../assets/icon/user-icon.png" class="action-icon" alt="User" /></a>
+    <a href="../profile/index.html""><img src=" ../assets/icon/user-icon.png" class="action-icon" alt="User" /></a>
   </section>
 </body>
 
