--- a/profile/index.html
+++ b/profile/index.html
@@ -22,6 +22,59 @@
         <img class="arrow-icon" src="../assets/icon/arrow-icon.png" alt="alternate accounts">
       </div>
     </div>
+
+    <div class="user-stats">
+      <img class="user-icon" src="../assets/img/story-image.png" alt="user icon">
+
+      <div class="posts">
+        <p class="stats">54</p>
+        <p>Posts</p>
+      </div>
+
+      <div class="followers">
+        <p class="stats">834</p>
+        <p>Followers</p>
+      </div>
+
+      <div class="following">
+        <p class="stats">162</p>
+        <p>Following</p>
+      </div>
+    </div>
+
+    <div class="description">
+      <p class="user-name"> Jacob West</p>
+      <p>Digital goodies designer <span class="user-link">@pixsellz</span></p>
+      <p>Everything is designed.</p>
+    </div>
+
+    <div class="edit">
+      <p class="buttom-text">Edit Profile</p>
+    </div>
+
+    <section class="stories-container">
+      <div class="story-item">
+        <img class="story-img new" src="../assets/icon/plus-icon.png" alt="new stories highlight">
+        <p class="story-author">New</p>
+      </div>
+
+      <div class="story-item">
+        <img class="story-img" src="https://picsum.photos/100/100?random=13" alt="story image">
+        <p class="story-author">Friends</p>
+      </div>
+
+      <div class="story-item">
+        <img class="story-img" src="https://picsum.photos/100/100?random=14" alt="story image">
+        <p class="story-author">Sport</p>
+      </div>
+
+      <div class="story-item">
+        <img class="story-img" src="https://picsum.photos/100/100?random=15" alt="story image">
+        <p class="story-author">Design</p>
+      </div>
+
+    </section>
+
   </div>
 
   <div class="menu-alt">
