feature(svg icon): replaced tab-bar icons with inline svg

--- a/profile/index.html
+++ b/profile/index.html
@@ -118,12 +118,38 @@
       </>
 
       <section class="tab-bar">
-        <a href="../home/index.html"><img src="../assets/icon/home-icon.svg" class="action-icon" alt="Home" /></a>
-        <a href="../search/index.html"><img src="../assets/icon/search-icon.png" class="action-icon" alt="Search" /></a>
-        <a href="#"><img src="../assets/icon/add-icon.png" class="action-icon" alt="Add" /></a>
-        <a href="../likes/index.html"><img src="../assets/icon/like-icon.svg" class="action-icon" alt="Like"
-            id="like-icon" /></a>
-        <a href="../profile/index.html""><img src=" ../assets/icon/user-icon.png" class="action-icon" alt="User" /></a>
+        <a href="../home/index.html">
+          <svg id="home-icon" width="22" height="24" viewBox="0 0 22 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd"
+              d="M21.7 10.7059L11.7 0.904491C11.3111 0.523373 10.6889 0.523373 10.3 0.904491L0.300019 10.7059C0.108129 10.894 0 11.1514 0 11.4201V23.5L0.00804008 23.5899C0.0503849 23.8231 0.25454 24 0.5 24L8.5 23.9997C8.77613 23.9996 8.99998 23.7758 9 23.4997V18L9.00509 17.8237C9.09634 16.2489 9.40232 15 11 15L11.1763 15.0051C12.6344 15.0896 12.9558 16.2155 12.9955 17.6501L13 18V23.4997C13 23.7758 13.2239 23.9996 13.5 23.9997L21.5 24L21.5899 23.9919C21.8231 23.9496 22 23.7455 22 23.5V11.4201C22 11.1514 21.8919 10.894 21.7 10.7059ZM1.5 11.6301L11 2.31877L20.5 11.6301V22.4999L14.5 22.4997V18L14.4953 17.6307C14.4284 15.2006 13.5423 13.6397 11.263 13.5076L11.0433 13.5006C8.55145 13.5 7.66187 15.0746 7.5076 17.737L7.50063 17.9567L7.50011 22.4997L1.5 22.4999V11.6301Z"
+              fill="#262626" />
+          </svg>
+        </a>
+        <a href="../search/index.html">
+          <svg id="search-icon" width="24" height="24" viewBox="0 0 24 24" fill="none"
+            xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd"
+              d="M19.75 10C19.75 4.61522 15.3848 0.25 10 0.25C4.61522 0.25 0.25 4.61522 0.25 10C0.25 15.3848 4.61522 19.75 10 19.75C12.4226 19.75 14.6388 18.8664 16.344 17.404L22.3336 23.3943L22.4177 23.4669C22.7114 23.6848 23.128 23.6606 23.3943 23.3943C23.6872 23.1014 23.6872 22.6265 23.3943 22.3336L17.404 16.344C18.8664 14.6388 19.75 12.4226 19.75 10ZM1.75 10C1.75 5.44365 5.44365 1.75 10 1.75C14.5563 1.75 18.25 5.44365 18.25 10C18.25 14.5563 14.5563 18.25 10 18.25C5.44365 18.25 1.75 14.5563 1.75 10Z"
+              fill="#262626" />
+          </svg>
+        </a>
+        <a href="#">
+          <svg id="post-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd"
+              d="M17 0.25C20.7279 0.25 23.75 3.27208 23.75 7V17C23.75 20.7279 20.7279 23.75 17 23.75H7C3.27208 23.75 0.25 20.7279 0.25 17V7C0.25 3.27208 3.27208 0.25 7 0.25H17ZM17 1.75H7C4.10051 1.75 1.75 4.10051 1.75 7V17C1.75 19.8995 4.10051 22.25 7 22.25H17C19.8995 22.25 22.25 19.8995 22.25 17V7C22.25 4.10051 19.8995 1.75 17 1.75ZM12.7432 5.89823C12.6935 5.53215 12.3797 5.25 12 5.25L11.8982 5.25685L11.8006 5.27679C11.4832 5.36411 11.25 5.65482 11.25 6V11.249L6 11.25L5.89823 11.2568C5.53215 11.3065 5.25 11.6203 5.25 12L5.25685 12.1018C5.30651 12.4678 5.6203 12.75 6 12.75L11.25 12.749V18L11.2568 18.1018C11.3065 18.4678 11.6203 18.75 12 18.75L12.1018 18.7432C12.4678 18.6935 12.75 18.3797 12.75 18V12.75H18L18.1018 12.7432C18.4678 12.6935 18.75 12.3797 18.75 12L18.7432 11.8982C18.6935 11.5322 18.3797 11.25 18 11.25H12.75V6L12.7432 5.89823Z"
+              fill="#262626" />
+          </svg>
+        </a>
+        <a href="../likes/index.html">
+          <svg id="like-icon" width="24" height="21" viewBox="0 0 24 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd"
+              d="M11.8725 2.65511L11.2175 1.88951C8.58142 -0.746533 4.37761 -0.5669 1.74157 2.06914C-0.894471 4.70518 -0.387159 9.80151 2.24888 12.4375C3.31874 13.5074 4.92092 14.9887 7.05542 16.8815L8.85115 18.4612L10.8681 20.212C11.4234 20.6913 12.2439 20.6986 12.8077 20.2293L14.4416 18.8594C17.3029 16.4413 19.4262 14.5366 20.8115 13.1454L21.171 12.7788L21.4939 12.4375C23.9489 9.79014 24.5798 4.64387 22.005 2.06914L21.8185 1.88951C19.1711 -0.565474 15.179 -0.685229 12.6042 1.88951L11.8725 2.65511ZM2.80223 3.1298C4.88666 1.04537 8.11137 0.947647 10.118 2.91183L11.8111 4.89048L13.6886 2.92588C15.6145 1.00055 18.6838 1.02838 20.7986 2.98939L20.9645 3.14958C22.7839 4.96937 22.4744 9.17411 20.394 11.4176L20.0815 11.7477L19.7348 12.1012C18.5864 13.2537 16.8845 14.7978 14.6405 16.7208L13.4734 17.7138L11.8481 19.0764L9.83442 17.3285L8.39319 16.0625C6.36239 14.2676 4.79575 12.832 3.69885 11.7613L3.30954 11.3769C1.138 9.20535 0.866398 5.06563 2.80223 3.1298Z"
+              fill="#262626" />
+          </svg>
+        </a>
+        <a href="../profile/index.html"">
+          <img src=" ../assets/icon/user-icon.png" class="action-icon" alt="User" />
+        </a>
       </section>
   </main>
 </body>
