feature(profile): done

--- a/profile/index.html
+++ b/profile/index.html
@@ -12,16 +12,43 @@
 <body>
   <input id="toggle" name="hamburguer-icon" type="checkbox">
   <nav class="side-menu">
-    <div class="toggle">
-      <label class="toggle-side-menu" for="toggle">
-        <img src="../assets/icon/hamburguer-icon.png" alt="hamburguer-icon">
-      </label>
-    </div>
 
-    <p>jacob_w sidemenu</p>
-    <div class="menu-options">
+    <p class="user-name">jacob_w</p>
 
-    </div>
+    <section class="menu-options">
+      <div class="menu-option">
+        <img src="../assets/icon/archive-icon.svg" alt="Archive Icon">
+        <p>Archive</p>
+      </div>
+      <div class="menu-option">
+        <img src="../assets/icon/activity-icon.svg" alt="Activity Icon">
+        <p>Your Activity</p>
+      </div>
+      <div class="menu-option">
+        <img src="../assets/icon/qr-code-icon.svg" alt="Nametag Icon">
+        <p>Nametag</p>
+      </div>
+      <div class="menu-option">
+        <img src="../assets/icon/saved-icon.svg" alt="Saved Icon">
+        <p>Saved</p>
+      </div>
+      <div class="menu-option">
+        <img src="../assets/icon/close-friends-icon.svg" alt="Close Friends Icon">
+        <p>Close Friends</p>
+      </div>
+      <div class="menu-option">
+        <img src="../assets/icon/discover-icon.svg" alt="Discover People Icon">
+        <p>Discover People</p>
+      </div>
+      <div class="menu-option">
+        <img src="../assets/icon/facebook-icon.svg" alt="Archive Icon">
+        <p>Open Facebook</p>
+      </div>
+      <div class="menu-option">
+        <img src="../assets/icon/settings-icon.svg" alt="Archive Icon">
+        <p>Settings</p>
+      </div>
+    </section>
   </nav>
 
   <main>
@@ -30,7 +57,11 @@
         <img class="lock-icon" src="../assets/icon/lock-icon.png" alt="locked account icon">
         <p>jacob_w</p>
         <img class="arrow-icon" src="../assets/icon/arrow-icon.png" alt="alternate accounts">
+
       </div>
+      <label class="toggle-side-menu" for="toggle">
+        <img src="../assets/icon/hamburguer-icon.png" alt="hamburguer-icon">
+      </label>
     </div>
 
 
